Fix footer on small devices

--- a/resources/assets/scss/modules/mastfoot.scss
+++ b/resources/assets/scss/modules/mastfoot.scss
@@ -7,8 +7,12 @@
 
 .block--alt + .mastfoot,
 .cta + .mastfoot {
-  margin-top: -5rem;
+  margin-top: -3rem;
   border-top: 0;
+
+  @include media-breakpoint-up(lg) {
+    margin-top: -5rem;
+  }
 }
 
 .block--alt + .block--alt + .mastfoot {
